<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/heading_insert">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/select_subject" />

            <Spinner
                android:id="@+id/spinner_subject"
                style="@style/textInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:entries="@array/subjects_list"
                android:minHeight="48dp"
                android:backgroundTint="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/select_question" />

            <Spinner
                android:id="@+id/spinner_question"
                style="@style/textInputStyle"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:minHeight="48dp"
                android:backgroundTint="@color/yellow" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/question_textInput"
                style="@style/textInputStyle"
                android:visibility="gone"
                android:layout_marginHorizontal="0dp"
                app:boxBackgroundMode="outline"
                app:hintTextColor="#78909C"
                app:placeholderTextColor="#92929C"
                app:placeholderText="@string/hint_question" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_txt"
                    style="@style/textInputEditTextStyle"
                    android:hint="@string/heading_question"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:scrollbars="vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/option_a_textInput"
                style="@style/textInputStyle"
                android:visibility="gone"
                android:layout_marginHorizontal="0dp"
                app:boxBackgroundMode="outline"
                app:hintTextColor="#78909C"
                app:placeholderTextColor="#92929C"
                app:placeholderText="@string/hint_optionA" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/option_a_txt"
                    style="@style/textInputEditTextStyle"
                    android:hint="@string/heading_optionA"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/option_b_textInput"
                style="@style/textInputStyle"
                android:visibility="gone"
                android:layout_marginHorizontal="0dp"
                app:boxBackgroundMode="outline"
                app:hintTextColor="#78909C"
                app:placeholderTextColor="#92929C"
                app:placeholderText="@string/hint_optionB" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/option_b_txt"
                    style="@style/textInputEditTextStyle"
                    android:hint="@string/heading_optionB"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/option_c_textInput"
                style="@style/textInputStyle"
                android:visibility="gone"
                android:layout_marginHorizontal="0dp"
                app:boxBackgroundMode="outline"
                app:hintTextColor="#78909C"
                app:placeholderTextColor="#92929C"
                app:placeholderText="@string/hint_optionC" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/option_c_txt"
                    style="@style/textInputEditTextStyle"
                    android:hint="@string/heading_optionC"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/option_d_textInput"
                style="@style/textInputStyle"
                android:visibility="gone"
                android:layout_marginHorizontal="0dp"
                app:boxBackgroundMode="outline"
                app:hintTextColor="#78909C"
                app:placeholderTextColor="#92929C"
                app:placeholderText="@string/hint_optionD" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/option_d_txt"
                    style="@style/textInputEditTextStyle"
                    android:hint="@string/heading_optionD"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/updateBtn"
                android:visibility="gone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginVertical="30dp"
                android:background="@drawable/round_circle"
                android:importantForAccessibility="no"
                android:src="@drawable/check" />
        </LinearLayout>
    </ScrollView>


    <ImageButton
        android:id="@+id/backBtn_updateOperation"
        style="@style/backBtn"
        android:backgroundTint="@color/yellow"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/heading_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/heading_update"
        android:textSize="22sp"
        android:letterSpacing="0.1"
        android:textAlignment="center"
        android:fontFamily="@font/segoe"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toEndOf="@+id/backBtn_updateOperation"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>