<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/lowerCircle_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperCircle_quiz">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/correct_txt"
                style="@style/txtView_score" />

            <TextView
                android:id="@+id/rightAns_score"
                style="@style/btn_score"
                android:text="@string/score_txt"
                android:background="@drawable/btn_green_border" />

            <TextView
                android:text="@string/incorrect_txt"
                style="@style/txtView_score"/>

            <TextView
                android:id="@+id/wrongAns_score"
                style="@style/btn_score"
                android:text="@string/score_txt"
                android:background="@drawable/btn_red_border" />

            <TextView
                android:text="@string/percentage_txt"
                style="@style/txtView_score" />

            <TextView
                android:id="@+id/percent_score"
                style="@style/btn_score"
                android:text="@string/scorep_txt"
                android:background="@drawable/btn_white_border" />

        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/upperCircle_quiz"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:layout_marginBottom="560dp"
        android:background="@drawable/round_circle"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        style="@style/headingTextView"
        android:text="@string/heading_score"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/upperCircle_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/lowerCircle_main"
        android:layout_width="450dp"
        android:layout_height="300dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/round_circle"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-19dp" />

    <ImageButton
        android:id="@+id/shareBtn_score"
        style="@style/backBtn"
        android:padding="10dp"
        android:background="@drawable/blue_round"
        android:importantForAccessibility="no"
        android:src="@drawable/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lowerCircle_main"
        app:layout_constraintVertical_bias="0.204" />

    <ImageButton
        android:id="@+id/homeBtn_score"
        style="@style/backBtn"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="@+id/upperCircle_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>