<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/darkBlue"
    android:layout_height="match_parent"
    tools:context=".AdminOperationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insertBtn"
            style="@style/MainBtn"
            android:text="@string/insert_operation" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            style="@style/MainBtn"
            android:text="@string/update_operation" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            style="@style/MainBtn"
            android:text="@string/delete_operation" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/backBtn_adminOperation"
        style="@style/backBtn"
        android:backgroundTint="@color/yellow"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>