<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubjectActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperCircle_subject">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/androidBtn"
                style="@style/MainBtn"
                android:text="@string/sub_android" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bigdataBtn"
                style="@style/MainBtn"
                android:text="@string/sub_bigdata" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pythonBtn"
                style="@style/MainBtn"
                android:text="@string/sub_python" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/upperCircle_subject"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:layout_marginBottom="544dp"
        android:background="@drawable/round_circle"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:id="@+id/heading_subject"
        style="@style/headingTextView"
        android:text="@string/heading_subject"
        app:layout_constraintBottom_toBottomOf="@+id/upperCircle_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <ImageButton
        android:id="@+id/backBtn_subject"
        style="@style/backBtn"
        app:layout_constraintBottom_toBottomOf="@+id/upperCircle_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>